[IMP] mail: prevent partner name from overflowing
Some of them were completely missing (eg. author name on message, followers
menu), others were only partially done (eg. missing no wrap).

Adapt all of them to guideline with class.

closes odoo/odoo#73660

--- a/addons/mail/static/src/components/attachment_viewer/attachment_viewer.scss
+++ b/addons/mail/static/src/components/attachment_viewer/attachment_viewer.scss
@@ -88,12 +88,6 @@
     min-width: 0;
 }
 
-.o_AttachmentViewer_nameText {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
 .o_AttachmentViewer_toolbar {
     position: absolute;
     bottom: 45px;
